--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "lint-staged": {
     "*.{js,ts,json,css,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
