--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "egg": "^3.28.0"
+    "egg": "^3.28.0",
+    "egg-view-nunjucks": "^2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
