--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "egg": "^3.28.0",
+    "egg-cors": "^3.0.1",
     "egg-view-nunjucks": "^2.3.0"
   },
   "devDependencies": {
